--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -4,7 +4,7 @@
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
     <p>{{ faceSnap.description }}</p>
     <p>
-      <button (click)="onSnap()">{{buttonText}}</button>
+      <button (click)="onaddSnap()">{{buttonText}}</button>
       🤌 {{ faceSnap.snaps }}
    
     </p>
